styling, article added, seo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ben Wuebker</title>
+    <meta
+      name="description"
+      content="Hire me to build a beautiful and modern React website. Browse my work and get a quote"
+    />
+    <title>Ben Wuebker - Web Development Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
