google meta tag

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="Hire me to build a beautiful and modern React website. Browse my work and get a quote"
     />
+    <meta
+      name="google-site-verification"
+      content="TsxEIxFnyZn1KTr29dIRv5A9DHsMrU6rOlJxvI3D8n4"
+    />
     <title>Ben Wuebker - Web Development Portfolio</title>
   </head>
   <body>
