--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       name="google-site-verification"
       content="TsxEIxFnyZn1KTr29dIRv5A9DHsMrU6rOlJxvI3D8n4"
     />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ben Wuebker - Web Development Portfolio</title>
   </head>
   <body>
