updated nav, project, heading styling. added project.

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta
       name="description"
-      content="Hire me to build a beautiful and modern React website. Browse my work and get a quote"
+      content="Hire me to build a React website for your business. Browse my work and get a quote for a web development project"
     />
     <meta
       name="google-site-verification"
