added google analytics tag

--- a/index.html
+++ b/index.html
@@ -8,12 +8,32 @@
       content="Hire me to build a React website for your business. Browse my work and get a quote for a web development project"
     />
     <meta
+      name="keywords"
+      content="web design minneapolis , web developer minneapolis, front end developer,  "
+    />
+    <meta
       name="google-site-verification"
       content="TsxEIxFnyZn1KTr29dIRv5A9DHsMrU6rOlJxvI3D8n4"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ben Wuebker - Web Development Portfolio</title>
   </head>
+
+  <!-- Google tag (gtag.js) -->
+  <script
+    async
+    src="https://www.googletagmanager.com/gtag/js?id=G-231V4JYGP1"
+  ></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-231V4JYGP1");
+  </script>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
